--- a/smith/css/styles.css
+++ b/smith/css/styles.css
@@ -169,24 +169,74 @@ header{
 .conteiner_form{
     width: 72%;
     float: left;
+    margin: 10px 1px 1px 1px;
 }
 .contact{
-    width: 27%;
+    width: 26%;
     float: right;
+    padding-top: 11px;
+    font: 0.8em 'Lato', sans-serif;
+    line-height: 1.7;
+    word-spacing: 3px;
 }
 input[type="text"]{
     background-color: #454545;
-    width: 550px;
-    height: 50px;
+    width: 97%;
+    height: 35px;
     border: none;
     color:#fff;
-    margin: 10px;
+    margin: 9px 0;
+    padding-left: 14px;
+    font: 0.7em 'Lato', sans-serif;
 }
 textarea{
     background-color: #454545;
-    width: 550px;
-    height: 250px;
+    width: 97%;
+    height: 139px;
     border: none;
     color:#fff;
-    margin: 10px;
+    margin: 7px 0 15px;
+    padding:10px 0 0 14px;
+    resize: none;
+}
+.form-holder h1{
+    font: 1.95em 'Lato', sans-serif;
+    padding-top: 59px;
+}
+.form-holder h2{
+    font: 1.2em 'Lato', sans-serif;
+    margin-top: -4px;
+}
+input[type="submit"]{
+    background-color: #2eb398;
+    color: #fff;
+    width: 90px;
+    height: 37px;
+    float: right;
+    border: none;
+    margin-right: 4px;
+    font: 0.7em 'Lato', sans-serif;  
+
+}
+.contact ul{
+    padding-top:33px;
+    font: 0.9em 'Lato', sans-serif;  
+    line-height: 1.9;
+}
+.contact ul li img{
+    padding-right: 10px;
+}
+footer{
+    background-color: #222222;  
+    width: 100%;
+    height: 40px;
+}
+.footer_center{
+    margin: 0 auto;
+    width: 1020px;
+}
+footer p{
+    color: #3a3a3a;   
+    font: 0.75em 'Lato', sans-serif; 
+    padding: 13px 0 0 38px;
 }
